objects/SMAX_PS_EntitlementDate__c.object
<CustomObject>
    <label>Entitlement Date</label>
    <nameField>
        <displayFormat>ED-{0000000000}</displayFormat>
        <label>Entitlement Date Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entitlement Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SMAX_PS_Is_Open__c</fullName>
        <formula>AND(
  ISBLANK( SMAX_PS_ServiceOrderNumber__c ),
  ISBLANK( SMAX_PS_SAP_Notification_ID__c ),
  ISBLANK( SMAX_PS_WorkOrder__c ) 
)</formula>
        <label>Is Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Sales_Org__c</fullName>
        <formula>SMAX_PS_ContractItem__r.SVMX_PS_Parent_Contract__r.SMAX_PS_SalesOrg__c</formula>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Entitlement Dates</relationshipLabel>
        <relationshipName>Entitlement_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Entitlement__c</fullName>
        <label>Contract Entitlement</label>
        <referenceTo>SVMXC__Service_Contract_Services__c</referenceTo>
        <relationshipLabel>Entitlement Dates</relationshipLabel>
        <relationshipName>Entitlement_Dates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Entitlement Date Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_PlannedDate__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ContractItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Item</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Entitlement Dates</relationshipLabel>
        <relationshipName>Entitlement_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CoveredProduct__c</fullName>
        <label>Covered Product</label>
        <referenceTo>SVMXC__Service_Contract_Products__c</referenceTo>
        <relationshipLabel>Entitlement Dates</relationshipLabel>
        <relationshipName>Entitlement_Dates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServiceOrderNumber__c</fullName>
        <label>Service Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Notification_ID__c</fullName>
        <description>The SAP Notification ID this Entitlement Date was consumed by.</description>
        <inlineHelpText>The SAP Notification ID this Entitlement Date was consumed by.</inlineHelpText>
        <label>SAP Notification ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EntitlementCondition__c</fullName>
        <label>Entitlement Condition</label>
        <length>4</length>
        <type>Text</type>
    </fields>
</CustomObject>